# CricketAiAnalyzerV2

./: .replit  app.py  gunicorn_config.py  pyproject.toml  replit.md
attached_assets/: Pasted-I-ll-guide-you-through-implementing-the-roadmap-step-by-step-Let-s-start-with-Immediate-Fixes--1750713996758_1750713996759.txt  Pasted-INFO-app-Video-uploaded-successfully-abdd0532-5e4f-4d27-95de-723cbc5074e8-mov-INFO-app-Starting-bow-1750711789250_1750711789251.txt
services/: advanced_pose_analyzer.py  audio_impact_detector.py  ball_tracker.py  calibration.py  enhanced_ball_tracker.py  pose_analyzer.py  report_generator.py  trajectory_modeling.py  video_processor.py  visualization_generator.py  yolo_detector.py
static/css/: style.css
static/js/: main.js
templates/: api_docs.html  index.html
